Update environment variable loading in bot and enhance error handling in mini-app. Refactor App component to check for Telegram WebApp SDK and Speech Recognition API support, and conditionally import mock environment in development mode.

--- a/mini-app/vercel.json
+++ b/mini-app/vercel.json
@@ -2,10 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "mini-app/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "mini-app/dist" }
+      "config": { "distDir": "dist" }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "mini-app/dist/index.html" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
