--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -19,9 +19,13 @@
     "@telegram-apps/telegram-ui": "^2.1.8",
     "@tonconnect/ui-react": "^2.1.0",
     "eruda": "^3.4.1",
+    "framer-motion": "^12.11.3",
+    "lucide-react": "^0.510.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.23.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
