--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@tailwindcss/vite": "^4.1.6",
     "@telegram-apps/sdk": "^3.9.2",
     "@types/node": "^20.17.46",
     "@types/react": "^18.2.0",
@@ -36,12 +37,15 @@
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "@vitejs/plugin-react-swc": "^3.8.1",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.1.1",
     "globals": "^15.2.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.4",
