--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -18,6 +18,7 @@
     "@telegram-apps/sdk-react": "^3.2.4",
     "@telegram-apps/telegram-ui": "^2.1.8",
     "@tonconnect/ui-react": "^2.1.0",
+    "clsx": "^2.1.1",
     "eruda": "^3.4.1",
     "framer-motion": "^12.11.3",
     "lucide-react": "^0.510.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.0",
+    "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
