--- a/bot/vercel.json
+++ b/bot/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/bot.ts",
+        "src": "api/index.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/bot",
-        "dest": "api/bot.ts"
+        "src": "/api/(.*)",
+        "dest": "api/index.ts"
       }
     ]
   }
