--- a/bot/package.json
+++ b/bot/package.json
@@ -14,16 +14,23 @@
   "dependencies": {
     "@grammyjs/conversations": "^2.1.0",
     "@grammyjs/storage-mongodb": "^2.5.1",
+    "@upstash/redis": "^1.34.9",
+    "@vercel/node": "^5.1.16",
     "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "grammy": "^1.36.1",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.2"
+    "mongoose": "^8.15.0",
+    "zod": "^3.25.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.17",
+    "@types/axios": "^0.9.36",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.2",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.15.19",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
