--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -15,9 +15,12 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@telegram-apps/sdk-react": "^3.2.4",
     "@telegram-apps/telegram-ui": "^2.1.8",
     "@tonconnect/ui-react": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eruda": "^3.4.1",
     "framer-motion": "^12.11.3",
@@ -48,6 +51,7 @@
     "globals": "^15.2.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.4",
